refactor each sheet generating with separation (genericSheetTemplate = main, generateSectionSheet = template for data, lineChartGenerator = manage graphics) v5